--- a/classwork/MovieLibrary/MovieLibrary.WinHost/MovieLibrary.WinHost.csproj
+++ b/classwork/MovieLibrary/MovieLibrary.WinHost/MovieLibrary.WinHost.csproj
@@ -4,6 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <Company>Your Name</Company>
+    <Product>Movie Library</Product>
   </PropertyGroup>
 
   <ItemGroup>
