Story 3 Complete - Added About Window

--- a/labs/Lab 3/CharacterCreator.WinHost/CharacterCreator.WinHost.csproj
+++ b/labs/Lab 3/CharacterCreator.WinHost/CharacterCreator.WinHost.csproj
@@ -4,6 +4,9 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <Authors></Authors>
+    <Company>Matthew Smith C# ITSE 1430</Company>
+    <Product>Character Creator</Product>
   </PropertyGroup>
 
   <ItemGroup>
