--- a/labs/Lab 5/CharacterCreator.WinHost/CharacterCreator.WinHost.csproj
+++ b/labs/Lab 5/CharacterCreator.WinHost/CharacterCreator.WinHost.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CharacterCreator.SqlServer\CharacterCreator.SqlServer.csproj" />
     <ProjectReference Include="..\CharacterCreator\CharacterCreator.csproj" />
   </ItemGroup>
 
